--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-datepicker": "^1.6.0",
     "react-native-geo-fencing": "^0.1.0",
     "react-native-geocoding": "^0.3.0",
+    "react-native-gifted-form": "^0.1.1",
     "react-native-google-places-autocomplete": "^1.3.6",
     "react-native-maps": "^0.15.3",
     "react-native-router-flux": "^4.0.0-beta.28",
