--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mapbox/polyline": "^0.2.0",
+    "create-react-class": "^15.6.3",
     "isomorphic-fetch": "^2.2.1",
     "jest-fetch-mock": "^1.5.0",
     "jwt-decode": "^2.2.0",
