--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "lodash.uniq": "^4.5.0",
     "moment": "^2.22.1",
     "moment-timer": "^1.2.1",
-    "native-base": "^2.4.2",
+    "native-base": "^2.3.3",
     "react": "16.0.0",
     "react-native": "^0.50.4",
     "react-native-datepicker": "^1.6.0",
+    "react-native-fontawesome": "^5.7.0",
     "react-native-geo-fencing": "^0.1.0",
     "react-native-geocoding": "^0.3.0",
     "react-native-gifted-form": "^0.1.1",
