--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-gifted-form": "^0.1.1",
     "react-native-google-places-autocomplete": "^1.3.6",
     "react-native-maps": "^0.15.3",
+    "react-native-mock": "^0.3.1",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-streetview": "^0.1.4",
     "react-redux": "^5.0.7",
